OCR the images finished

--- a/examhall.html
+++ b/examhall.html
@@ -21,7 +21,7 @@
         </a>
     </div>
     </nav>
-    <div class="card m-1 bg-black" style="position: sticky;top: 0px;z-index: 999;">
+    <div class="card m-1 bg-black" style="position: sticky;top: 0px;z-index: 1;">
     <div class="card-body">
         <img src="images/clock.png" alt="clock" width="50px" height="50px">
         <span style="margin-left: 20%; font-size: 30px;font-weight: 800;font-family: clockFont;color:rgb(22, 201, 22);">01 : 11</span>
@@ -82,7 +82,9 @@
     </div>
     
     </div>
+    <button class="btn" style="width: 50%;background-color: #16c916;margin-left: 25%;" onchange="submit()">Submit Answers</button>
     <br><hr style="color: darkgray;">
     <p style="color: rgb(22, 201, 22);">&nbsp;Ramdisi Abeywickrama&copy; All Rights Reserved . 2025 v1</p>
+    <script src="scripts/examhall.js"></script>
 </body>
 </html>
