--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h6 class="card-subtitle mb-2 text-body-secondary"  style="text-align: center;">Are You Ready ? </h6>
         <h2 class="card-text">Here the steps 👇</h2>
         <ol class="list-group list-group-numbered">
-            <li class="list-group-item">You Upload the MCQ Paper</li>
+            <li class="list-group-item">You Upload the MCQ Paper As Images (PNG/JPEG/JPG)</li>
             <li class="list-group-item">Select the Time Difficulty</li>
             <li class="list-group-item">Answer All Question before time Line</li>
             <li class="list-group-item">AI Mentor will check your Answers and give advices</li>
@@ -37,10 +37,11 @@
         <pre>Developer : Ramdisi Abeywickrama</pre>
         <pre>Frontend  : HTML+Bootstrap+CSS</pre>
         <pre>Backend   : Vanilla JS</pre>
-        <pre>API       : Gemini AI , Tesseract JS</pre>
+        <pre>API       : Gemini AI </pre>
+        <pre>Libraries : Tesseract JS</pre>
         <p>I want to address who hope to upskill their MCQ skill but not enough money to hire a proper tution master for 
             consulting and mentoring. Here you got the best solution that perfectly personalized for you.<br>
-            This is v1 and it limited to pdf which haven't pictures and charts.
+            This is v1 and it limited to Images which haven't pictures and charts.
             Anyway as the developer I hope you all get best results from exams using this.<br>
             <b>Keep in mind "PRACTICE ALWAYS MAKE YOU GOOD"</b><br>
             Happy learning to you!
