--- a/mentoring.html
+++ b/mentoring.html
@@ -26,7 +26,7 @@
             Wrong Answers : 20
             </div>
             <div class="col bg-warning fs-3 fw-bold text-white">
-            Marks : 30/50
+            Precentage : 45%
             </div>
         </div>
         </div>
