--- a/examhall.html
+++ b/examhall.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exam Hall</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <style>
@@ -12,7 +13,7 @@
         src: url(fonts/clockFont.ttf);
     }
 </style>
-<body class="bg-black">
+<body class="bg-black" onload="loadPaper()">
     <nav class="navbar bg-black">
     <div class="container-fluid">
         <a class="navbar-brand" href="#" style="font-size: 5vw;font-family: fantasy;color: rgb(22, 201, 22);">
@@ -28,61 +29,11 @@
     </div>
     </div>
     <div class="card m-1">
-    <div class="card-body">
-         1) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1" id="Q-A-1" value="A"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1" id="Q-A-1" value="B"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1" id="Q-A-1" value="C"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1" id="Q-A-1" value="D"> D) 127.0.1.2 <br><br>
-         2) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-2" id="Q-A-2" value="A"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-2" id="Q-A-2" value="B"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-2" id="Q-A-2" value="C"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-2" id="Q-A-2" value="D"> D) 127.0.1.2 <br><br>
-         3) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-3" id="Q-A-3" value="A"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-3" id="Q-A-3" value="B"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-3" id="Q-A-3" value="C"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-3" id="Q-A-3" value="D"> D) 127.0.1.2 <br><br>
-         4) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> D) 127.0.1.2 <br><br>
-         5) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> D) 127.0.1.2 <br><br>
-         6) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> D) 127.0.1.2 <br><br>
-         7) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> D) 127.0.1.2 <br><br>
-         8) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> D) 127.0.1.2 <br><br>
-         9) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> D) 127.0.1.2 <br><br>
-        10) What is the IP belongs to Class C IP  Range?<br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> A) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> B) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> C) 127.0.1.2 <br>
-        &nbsp;&nbsp;<input type="radio" name="Q-A-1"> D) 127.0.1.2 <br><br>
+    <div class="card-body" id="paperCanvas">
+        
     </div>
-    
     </div>
-    <button class="btn" style="width: 50%;background-color: #16c916;margin-left: 25%;" onchange="submitAnswers()">Submit Answers</button>
+    <button class="btn" style="width: 50%;background-color: #16c916;margin-left: 25%;" onclick="submitAnswers()">Submit Answers</button>
     <br><hr style="color: darkgray;">
     <p style="color: rgb(22, 201, 22);">&nbsp;Ramdisi Abeywickrama&copy; All Rights Reserved . 2025 v1</p>
     <script src="scripts/examhall.js"></script>
