--- a/mentoring.html
+++ b/mentoring.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
-<body class="bg-black">
+<body class="bg-black" onload="loadMarkings()">
     <nav class="navbar bg-black">
     <div class="container-fluid">
         <a class="navbar-brand" href="#" style="font-size: 5vw;font-family: fantasy;color: rgb(22, 201, 22);">
@@ -20,14 +20,14 @@
     <div class="card-body">
         <div class="container text-center">
         <div class="row">
-            <div class="col bg-success fs-3 fw-bold text-white">
-            Right Answers : 30
+            <div class="col bg-success fs-3 fw-bold text-white" id="rightAnswers">
+
             </div>
-            <div class="col bg-danger fs-3 fw-bold text-white">
-            Wrong Answers : 20
+            <div class="col bg-danger fs-3 fw-bold text-white" id="wrongAnswers">
+
             </div>
-            <div class="col bg-warning fs-3 fw-bold text-white">
-            Precentage : 45%
+            <div class="col bg-warning fs-3 fw-bold text-white" id="precentage">
+
             </div>
         </div>
         </div>
@@ -36,28 +36,17 @@
     <div class="card m-2" style="background: rgb(22, 201, 22);">
     <div class="card-body">
         <h2 style="text-align: center;">Advices For Wrong Answers</h2>
-        <ol class="list-group list-group-numbered">
-            <li class="list-group-item">Quection 23 <br>
-            1) What is the IP belongs to Class C IP  Range?
-            <p class="text-danger">Your Answer was : C)</p>
-            <p class="text-success">Right Answern is : B)</p>
-            <p class="text-info">Please read it book and dont give a fPlease read it book and dont give a fPlease read it book and dont give a fPlease read it book and dont give a fPlease read it book and dont give a fPlease read it book and dont give a f</p>
-            </li>
-            <li class="list-group-item">Quection 23 <br>
-            1) What is the IP belongs to Class C IP  Range?
-            <p class="text-danger">Your Answer was : C)</p>
-            <p class="text-success">Right Answern is : B)</p>
-            <p class="text-info">Please read it book and dont give a fPlease read it book and dont give a fPlease read it book and dont give a fPlease read it book and dont give a fPlease read it book and dont give a fPlease read it book and dont give a f</p>
-            </li>
+        <ol class="list-group list-group-numbered" id="advices">
             
         </ol>
     </div>
     </div>
     <div class="card m-2" style="background: rgb(22, 201, 22);">
     <div class="card-body">
-        <h1 style="text-align: center;">👏 Congragulation You are in Top 1% 👍</h1>
+        <h1 style="text-align: center;" id="finalAdvice"></h1>
     </div>
     </div>
+    <script src="scripts/mentoring.js"></script>
     <a href="index.html" style="margin-left: 20%;"><button class="btn btn-success" style="width: 50%;">Go Home</button></a>
 </body>
 </html>
